# odis2odv

./: DEVELOPMENT_NOTES.md  README.md  jsonValidate.bash  odis-profile-odv-generic-spreadsheet.md  odv-vocabulary-spec.txt  requirements.txt  xproc.bash
Deliverable_1_202303/examples/: ocean-data-test-003.json
Deliverable_1_202303/profile/: odis-profile-odv-generic-spreadsheet.md
converter/odisodv/: CMakeLists.txt  main.cpp
examples/: .~lock.ocean-data-test-003.txt#  bco-dmo-737163.odis2odv.json  ocean-data-test-001.json  ocean-data-test-003.json  ocean-data-test-003.txt
hot/: bco-dmo-737163.odis2odv.json
profile/: odis-profile-odv-generic-spreadsheet.md
schema/: odv-odis2odv.schema.json
tools/: jsonValidate.py
